# urlcutter

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  email.py  form_validators.py  models.py
app/auth/: email.py  forms.py  views.py
app/errors/: handlers.py
app/main/: forms.py  utilities.py  views.py
app/static/css/: dtsel.css  main.css
app/static/js/: dtsel.js  main.js  updateUrl.js  userUrls.js
app/templates/: account_settings.html  base.html  contact.html  delete_url_modal.html  flash_messages.html  footer.html  index.html  navbar.html  report_url.html  update_url.html  user.html
app/templates/auth/: change_email_request.html  delete_account.html  login.html  reset_password.html  reset_password_request.html  sign_up.html
app/templates/email/: confirm_email_change_mail.html  confirm_email_change_mail.txt  confirm_mail.html  confirm_mail.txt  contact_mail.html  contact_mail.txt  notification_email_change_mail.html  notification_email_change_mail.txt  report_mail.html  report_mail.txt  reset_password_mail.html  reset_password_mail.txt
app/templates/errors/: 404.html  500.html
