[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Dominik <dominik.szlaza@gazeta.pl>"]
description = ""
name = "urlcutter"
readme = "README.md"
version = "0.1.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
combine_as_imports = "true"
include_trailing_comma = "true"
known_first_party = ["src"]
line_length = 120
multi_line_output = 3

[tool.poetry.dependencies]
atomicwrites = "1.4.0"
attrs = "20.3.0"
blinker = "1.4"
click = "^8.0"
colorama = "^0.4.4"
dnspython = "2.1.0"
email-validator = "1.1.2"
flask = "1.1.2"
flask-login = "0.5.0"
flask-mail = "0.9.1"
flask-moment = "0.11.0"
flask-mongoengine = "1.0.0"
flask-wtf = "0.14.3"
greenlet = "1.0.0"
gunicorn = "20.1.0"
idna = "3.1"
iniconfig = "1.1.1"
itsdangerous = "1.1.0"
jinja2 = "2.11.3"
markupsafe = "1.1.1"
mongoengine = "0.23.0"
packaging = "^22.0"
pluggy = "0.13.1"
py = "1.10.0"
pyjwt = "2.0.1"
pyngrok = "5.0.5"
pyparsing = "2.4.7"
python = "^3.8.1"
python-dateutil = "2.8.1"
python-dotenv = "0.17.0"
pyyaml = "5.4.1"
six = "1.15.0"
toml = "0.10.2"
werkzeug = "1.0.1"
wtforms = "2.3.3"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.7"
black = "^24.2.0"
commitizen = "^3.15.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
toml-sort = "^0.23.1"
